fixed styling on smaller displays

--- a/components/CoflCoins/CoflCoinsPurchase.module.css
+++ b/components/CoflCoins/CoflCoinsPurchase.module.css
@@ -48,3 +48,16 @@
 .paymentLabel {
     width: 50%;
 }
+
+/* Temporary for the black friday styling */
+.reducedPrice {
+    color: red;
+    font-weight: bold;
+    padding-left: 10px;
+}
+
+@media all and (max-width: 992px) {
+    .premiumPlanCard {
+        width: calc(100%);
+    }
+}
